# Crypto-scalping-bot

./: .env.example  .gitignore  Cargo.toml  config.yaml
crates/bot-api/: Cargo.toml
crates/bot-api/src/: main.rs
crates/bot-cli/: Cargo.toml
crates/bot-cli/src/: main.rs
crates/bot-core/: Cargo.toml
crates/bot-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/bot-exchange/: Cargo.toml
