[package]
name = "bot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"   # <-- INI YANG KURANG

# Time handling (dengan fitur serde agar bisa di-serialize)
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
