[package]
name = "bot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"
